--- a/frontend/src/Wallet/wallet.module.css
+++ b/frontend/src/Wallet/wallet.module.css
@@ -1,26 +1,33 @@
 .backgroundContainer{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: start;
+    align-items: start;
     background-color: #09111D;
     width: 100vw;
     height: 100vh;
+    padding-top: 4rem;
+    padding-left: 2rem;
+    gap:2rem;
+
+
 
 }
 
 .connectDiv{
-    width: 70vw;
-    height: 60vh;
+    width: 20vw;
+    height: auto;
     border: 0.5px solid grey;
     border-radius: 8px;
     padding: 1rem;
     display: flex;
-    align-items: start;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
-
-
-
+    text-align: center;
+    gap: 16px;
 }
+
+
 
 .headingStyle{
     color: white;
@@ -28,14 +35,23 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    flex-wrap: wrap;
 }
 
 .authContainer{
     display: flex;
-    width: 100%;
-    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
+.supplyDiv{
+    width: 35vw;
+    height: auto;
+    border: 0.5px solid grey;
+    border-radius: 8px;
+    padding:1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
