--- a/frontend/src/Wallet/wallet.module.css
+++ b/frontend/src/Wallet/wallet.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: start;
     align-items: start;
+    flex-direction: column;
     background-color: #09111D;
     width: 100vw;
     height: 100vh;
@@ -14,7 +15,7 @@
 }
 
 .connectDiv{
-    width: 20vw;
+    width: 30vw;
     height: auto;
     border: 0.5px solid grey;
     border-radius: 8px;
@@ -54,4 +55,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.randomDiv{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap:2rem;
 }
