implemented the staking logic

--- a/frontend/src/WebAuth/auth.module.css
+++ b/frontend/src/WebAuth/auth.module.css
@@ -1,8 +1,12 @@
 .getInfo{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap:16px;
+}
 
-
-
+.deployContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
