--- a/frontend/src/Supply/commit.module.css
+++ b/frontend/src/Supply/commit.module.css
@@ -1,14 +1,13 @@
-.formContainer{
+.commitContainer{
     display: flex;
     flex-direction: column;
     gap:1rem;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    margin-top: 2rem;
     width: 25rem;
-    height: 20rem;
+    height: auto;
     border:0.5px solid grey;
-    padding:2rem;
     border-radius: 8px;
-
+    padding:1rem;
+    margin-top: 1rem;
 }
