--- a/frontend/src/Supply/stake.module.css
+++ b/frontend/src/Supply/stake.module.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     gap:1rem;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    margin-top: 2rem;
-    width: 20rem;
-    height: 15rem;
+    width: 25rem;
+    height: auto;
+    border:0.5px solid grey;
+    border-radius: 8px;
+    padding:1rem;
 }
 
 .progressDiv{
