--- a/frontend/src/Wallet/wallet.module.css
+++ b/frontend/src/Wallet/wallet.module.css
@@ -4,8 +4,8 @@
     align-items: start;
     flex-direction: column;
     background-color: #09111D;
-    width: 100vw;
-    height: 100vh;
+    width: 99vw;
+    height: 150vh;
     padding-top: 4rem;
     padding-left: 2rem;
     gap:2rem;
@@ -15,7 +15,7 @@
 }
 
 .connectDiv{
-    width: 30vw;
+    width: auto;
     height: auto;
     border: 0.5px solid grey;
     border-radius: 8px;
