--- a/frontend/src/Supply/commit.module.css
+++ b/frontend/src/Supply/commit.module.css
@@ -2,12 +2,11 @@
     display: flex;
     flex-direction: column;
     gap:1rem;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
-    width: 25rem;
-    height: auto;
+    width: 20rem;
+    height: 20rem;
     border:0.5px solid grey;
     border-radius: 8px;
     padding:1rem;
-    margin-top: 1rem;
 }
