--- a/frontend/src/Supply/stake.module.css
+++ b/frontend/src/Supply/stake.module.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: column;
     gap:1rem;
-    justify-content: start;
+    justify-content: center;
     align-items: center;
-    width: 25rem;
-    height: auto;
+    width: 20rem;
+    height: 20rem;
     border:0.5px solid grey;
     border-radius: 8px;
     padding:1rem;
@@ -17,4 +17,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.supplyParent{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
 }
