--- a/frontend/src/Hero/hero.module.css
+++ b/frontend/src/Hero/hero.module.css
@@ -1,22 +1,34 @@
-.heroContainer{
-    width: 100%;
-    height: 91.5vh;
-    background-color: #09111D;
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    flex-wrap: wrap;
-    padding:10rem 1rem 1rem 1rem;
+.background {
     background-image: url("../assets/5096160.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding: 10rem 1rem 1rem 1rem;
+    height: 91.5vh;
 }
 
-.heroText{
+.heroContainer {
+    width: 100%;
+    background-color: #09111d;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-wrap: wrap;
+    background: transparent;
+}
+
+.heroHeading {
     font-size: 64px;
-    color:white;
+    color: white;
     font-weight: bold;
-
 }
 
+.heroText {
+    color: white;
+}
+
+.number {
+    background: -webkit-linear-gradient(aqua, purple);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
